[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sgdk-symbol-usage"
version = "1.0.0"
description = "SGDK Symbol Usage Analyzer"
authors = [{name = "retrodevbr"}]
requires-python = ">=3.6"

[project.scripts]
sgdk-symbol-usage = "generate_report:main"

[tool.setuptools]
py-modules = ["generate_report"]

[tool.setuptools.package-dir]
"" = "src"

